--- a/templates/partials/introduction.html
+++ b/templates/partials/introduction.html
@@ -1,1 +1,1 @@
-Self-taught pythonist, with knowledge in mathematics, physics and python in general. 
+Self-taught pythonist, with knowledge in mathematics, physics and python in general. My CV can be seen <a href="https://ttm.sh/Qu8">here</a>.
